WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
312377
Unregister service worker registration when failing to retrieve stored imported scripts
https://bugs.webkit.org/show_bug.cgi?id=312377
Summary
Unregister service worker registration when failing to retrieve stored import...
youenn fablet
Reported
2026-04-15 07:24:12 PDT
Unregister service worker registration when failing to retrieve stored imported scripts
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-04-15 07:24:24 PDT
<
rdar://problem/174833692
>
youenn fablet
Comment 2
2026-04-15 07:51:51 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62823
EWS
Comment 3
2026-04-17 05:51:40 PDT
Committed
311444@main
(445265f9e1ad): <
https://commits.webkit.org/311444@main
> Reviewed commits have been landed. Closing PR #62823 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug