Cherry-pick 445265f9e1ad. rdar://175522816

Unregister service worker registration when failing to retrieve stored imported scripts
    rdar://174833692
    https://bugs.webkit.org/show_bug.cgi?id=312377

    Reviewed by Chris Dumez.

    We fail reading scripts as soon as one imported script cannot be read from disk.
    This triggers removal of the registration.
    Covered by added unit test.

    Canonical link: https://commits.webkit.org/311444@main

Canonical link: https://commits.webkit.org/305413.896@safari-7624.4-branch